--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,11 @@
 header{
     box-shadow: 2px 2px 2px rgb(0,0,0, 0.1);
+    background-color: white;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    padding-left: 80px;
+    padding-right: 80px;
+
 }
+
