The cards are rendered with the NgFor loop, and friend suggestions are displayed.

--- a/src/app/hamster-card/hamster-card.component.html
+++ b/src/app/hamster-card/hamster-card.component.html
@@ -1,7 +1,7 @@
 <div class="mainContainer">
     <div class="card">
-        <img src="./assets/img/hamsterPics/hamster1.jpg" alt="">
-        <p>Hallo, mein Name ist Freddy! Ich bin hier, um neue Freunde zu treffen!</p>
+        <img src="{{img}}" alt="">
+        <p>{{text}}</p>
         <button>like</button>
         <button>Nachricht</button>
     </div>
