--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <app-header></app-header>
-<app-hamster-card></app-hamster-card>
+<div class="flexrow">
+    <div class="container">
+        <app-hamster-card *ngFor="let i of [0,1,2,3]" [img]="postPics[i]" [text]="postTexts[i]"></app-hamster-card>
+    </div>
+<app-proposals></app-proposals>
+</div>
+
+
 
 
