friends and general style

--- a/src/app/hamster-card/hamster-card.component.html
+++ b/src/app/hamster-card/hamster-card.component.html
@@ -1,5 +1,5 @@
 <div class="mainContainer">
-    <div class="card">
+    <div class="standart-card card">
         <img src="{{img}}" alt="">
         <p>{{text}}</p>
         <button>like</button>
