--- a/src/app/proposals/proposals.component.html
+++ b/src/app/proposals/proposals.component.html
@@ -1,6 +1,6 @@
 <app-profile-row></app-profile-row>
 
-<b>Freundesvorschläge</b>
+<div class="margin-bottom-16"><b>Freundesvorschläge</b></div>
 
 <app-profile-row *ngFor="let i of [0,1,2,3]" [name]="names[i]" [description]="texts[i]" [img]="images[i]"></app-profile-row>
 
