--- a/src/app/profile-row/profile-row.component.scss
+++ b/src/app/profile-row/profile-row.component.scss
@@ -9,9 +9,22 @@
     object-position: center;
     margin-right: 16px;
     } 
-
     .description{
         color: rgba(0,0,0,0.5);
         font-size: 12px;
     }
+    .name{
+        width: 140px;
+    }
+    a{
+        font-size: 12px;
+        color: blue;
+        cursor: pointer;
+        text-decoration: none;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
+
 }
+
