--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,20 @@ body{
     margin: 0;
     background-color: rgba(0,0,0,0.05);
 }
+
+.margin-bottom-16{
+    margin-bottom: 16px;
+}
+
+.padding-16{
+    padding: 16px;
+}
+
+.standart-card{
+    background-color: white;
+    width: 400px;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 4px;
+    margin-bottom: 32px;
+    box-sizing: border-box;
+}
