Photo not found was displayed in the friend box. The error has been corrected. Installed Angular Material and added icons. Project finished for now except for responsiveness

--- a/src/app/hamster-card/hamster-card.component.html
+++ b/src/app/hamster-card/hamster-card.component.html
@@ -2,8 +2,8 @@
     <div class="standart-card card">
         <img src="{{img}}" alt="">
         <p>{{text}}</p>
-        <button>like</button>
-        <button>Nachricht</button>
+        <button><mat-icon>favorite</mat-icon>like</button>
+        <button><mat-icon>email</mat-icon>Nachricht</button>
     </div>
 </div>
 
