--- a/src/app/profile-row/profile-row.component.html
+++ b/src/app/profile-row/profile-row.component.html
@@ -3,5 +3,5 @@
     <div class="name">
         <b>{{name}}</b><br><span class="description">{{description}}</span>
     </div>  
-    <a href="">Folgen</a>
+    <a *ngIf="canFollow" (click)="fs.addFriend(name, description, img); canFollow=false">Folgen</a>
 </div>
