--- a/src/app/hamster-card/hamster-card.component.scss
+++ b/src/app/hamster-card/hamster-card.component.scss
@@ -30,6 +30,16 @@
         &:hover{
             background-color: rgba(0,0,0,0.5);
         }
+
+        mat-icon {
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }  
 }
 
